cmake_minimum_required(VERSION 2.8)
project(PlantowerPmsLinux)

set (CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -Werror")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_RELEASE} -Wall")


add_subdirectory(src)


enable_testing()
include (CTest)
add_subdirectory(test)

SET(MAJOR_VERSION "1")
SET(MINOR_VERSION "0")
SET(PATCH_VERSION "0")


IF(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
INCLUDE(InstallRequiredSystemLibraries)

SET(CPACK_SET_DESTDIR "on")
#SET(CPACK_PACKAGING_INSTALL_PREFIX "installed")
#SET(CPACK_COMPONENT_PRODUCTION_PACKAGING_INSTALL_PREFIX "installed-Production")
#SET(CPACK_COMPONENT_DEFAULT_PACKAGING_INSTALL_PREFIX "installed-Test")

SET(CPACK_GENERATOR "DEB")
set(CPACK_DEB_COMPONENT_INSTALL ON)
SET(CPACK_PACKAGE_DESCRIPTION "PlantowerPms")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A reader for PMS units")
SET(CPACK_PACKAGE_VENDOR "Raul Salinas-Monteagudo")
SET(CPACK_PACKAGE_CONTACT "rausalinas@gmail.com")
SET(CPACK_PACKAGE_VERSION_MAJOR "${MAJOR_VERSION}")
SET(CPACK_PACKAGE_VERSION_MINOR "${MINOR_VERSION}")
SET(CPACK_PACKAGE_VERSION_PATCH "${PATCH_VERSION}")
#SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}.${CPACK_PACKAGE_VERSION_PATCH}")
#demo dependencies
#SET(CPACK_DEBIAN_PACKAGE_DEPENDS " kate , plasma-desktop, libc6 (>= 2.1.3) ")
#set(CPACK_DEB_PACKAGE_COMPONENT "ON")
#dependencies for this service menu
#SET(CPACK_DEBIAN_PACKAGE_DEPENDS " libmosquittopp1, libmosquitto1 ")
#set(CPACK_DEB_PACKAGE_COMPONENT 1)
#SET(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
#SET(CPACK_DEBIAN_PACKAGE_SECTION "extra")
#SET(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
set(CPACK_SOURCE_GENERATOR TGZ)
#set(CPACK_COMPONENT_DEFAULT_DISPLAY_NAME "Default")
#set(CPACK_COMPONENT_PRODUCTION_DISPLAY_NAME "Production")
#set(CPACK_COMPONENTS_GROUPING ONE_PER_GROUP)
#SET(CPACK_COMPONENTS_ALL Production)
#set(CPACK_COMPONENTS_IGNORE_GROUPS 1)
#set(CPACK_COMPONENTS_ALL deb)
#set(CPACK_COMPONENTS_ALL_IN_ONE_PACKAGE 0)
#set(CPACK_COMPONENTS_ALL_GROUPS_IN_ONE_PACKAGE 0)
#set(CPACK_COMPONENTS_GROUPING IGNORE)
set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
set(CPACK_COMPONENTS_ALL Runtime Test)
set(PACK_Unspecified_COMPONENT_INSTALL 0)
set(CPACK_COMPONENT_RT_GROUP "Runtime")
set(CPACK_COMPONENT_TEST_GROUP "Test")
set(CPACK_COMPONENT_TEST_DEPENDS "Test Unspecified")

INCLUDE(CPack)

ENDIF(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")


